// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast> can render with theme 1`] = `
.c0 {
  color: red;
}

<div
  className="c0"
  role="status"
>
  <div
    className="Toast__Body-nim36i-4 "
  >
    Toast message
  </div>
  <div
    className="Toast__Close-nim36i-3 "
  >
    <button
      className="CloseButton-sqbalp-0 "
    />
  </div>
</div>
`;

exports[`<Toast> can render without theme 1`] = `
<div
  className="Toast-nim36i-0 "
  role="status"
>
  <div
    className="Toast__Body-nim36i-4 "
  >
    Toast message
  </div>
  <div
    className="Toast__Close-nim36i-3 "
  >
    <button
      className="CloseButton-sqbalp-0 "
    />
  </div>
</div>
`;

exports[`<Toast> customizes the layout with a children render function 1`] = `
<div
  className=""
  role="status"
>
  <p>
    custom layout
  </p>
</div>
`;

exports[`<Toast> customizes the layout with a children render node 1`] = `
<div
  className=""
  role="status"
>
  <p>
    custom layout
  </p>
</div>
`;
